[package]
name = "pastebin_gen"
description = "A command-line interface for writing PasteBin easily"
version = "0.1.7"
edition = "2021"
author = "Hícaro <hdanrlley1@gmail.com>"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/HicaroD/PasteBinGen"
repository = "https://github.com/HicaroD/PasteBinGen"
keyword = ["cli", "pastebin", "code"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.78"
clap = { version = "3.0.12", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dirs = "4.0.0"
